After testing a deployment, i found that image binaries are not being handled properly by AWS API gateway.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -12,6 +12,7 @@ ${view:header}
 						Welcome to the Dulce Web Framework!
 					</p>
 					<p class="card-text">{{ message }}</p>
+					<img src="/dev/assets/images/test.jpg"/>
 				</div>
 			</div>
 
