Created an example login form and formatted some of the templating

--- a/app/views/users.html
+++ b/app/views/users.html
@@ -1,7 +1,7 @@
 ${view:header}
-<body>
-	<ul>
-		<li>User1</li>
-	</ul>
-</body>
+<h5 class="card-title">Users</h5>
+<hr>
+<ul>
+	<li>User1</li>
+</ul>
 ${view:footer}
