--- a/app/views/error.html
+++ b/app/views/error.html
@@ -1,13 +1,9 @@
 ${view:header}
-<body>
-	<div class="card bg-warning">
-		<div class="card-header">
-			Error
-		</div>
-		<div class="card-body ">
-			<p class="card-text">${Message}</p>
-		</div>
-	</div>
-</body>
+<div class="card-header bg-warning">
+	Error
+</div>
+<div class="card-body bg-warning">
+	<p class="card-text">${Message}</p>
+</div>
 ${view:footer}
 </html>
