--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,1 +1,7 @@
-</div><!--- end of header.html:container-div-->
+                </div>
+                </div>
+                </div><!--- end of header.html:container-div-->
+            </div>
+        </div>
+    </body>
+</html>
