--- a/app/views/header.html
+++ b/app/views/header.html
@@ -10,5 +10,10 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="/dev/assets/css/main.css""></style>
 </head>
-<div class="container-fluid">
 ${view:navbar}
+<body>
+	<div class="container-fluid">
+		<div class="row m-3" id="app">
+			<div class="col-lg-12">
+				<div class="card">
+					<div class="card-body">
